generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               Int     @id @default(autoincrement())
  email            String  @unique
  password         String
  firstname        String
  lastname         String?
  profilePicture   String?
  bio              String?
  city             String?
  state            String?
  age              Int?
  gender           String?
  genderPreference String?
  lookingFor       String?
  profileActive    Boolean @default(true)

  activities Activity[]

  interests Interest[]

  connectToUsers   User[] @relation("ConnectedUsers")
  connectFromUsers User[] @relation("ConnectedUsers")

  notConnectToUsers   User[] @relation("NotConnectedUsers")
  notConnectFromUsers User[] @relation("NotConnectedUsers")
}

model Interest {
  id       Int    @id @default(autoincrement())
  interest String @unique
  users    User[]
}

model Activity {
  id           Int      @id @default(autoincrement())
  name         String
  logo         String?
  summary      String
  locations    String[]
  urlResources String[]
  categories   String[]

  users User[]
}

model Chat {
  id        Int      @id @default(autoincrement())
  members Int[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  messages  Message[] @relation("ChatMessages")
}

model Message {
  id Int @id @default(autoincrement())
  chat      Chat     @relation("ChatMessages", fields: [chatId], references: [id], onDelete: Cascade)
  chatId    Int
  senderId  Int
  text String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}